kustomizations/data/neo4j/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j
  labels:
    component: neo4j
spec:
  type: ClusterIP
  selector:
    component: neo4j
  ports:
  - name: http-web
    port: 7474
  - name: tcp-bolt
    port: 7687
