kustomizations/data/neo4j/base/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: neo4j-bolt
spec:
  entryPoints:
  - http-bolt
  routes:
  - kind: Rule
    match: Host(`*`)
    services:
    - name: neo4j
      port: 7687
    middlewares: []

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: neo4j-http
spec:
  entryPoints:
  - http
  - https
  routes:
  - kind: Rule
    match: >-
      Host(`*`) && (
      PathPrefix(`/browser/`) || (
      PathPrefix(`/db/`) && Headers(`Content-Type`, `application/json`) && Headers(`Accept`, `application/json`)
      )
      )
    services:
    - name: neo4j
      port: 7474
    middlewares: []
